--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Todo</title>
+        <title><%= title %></title>
     </head>
     <body>
-        <h1>Welcome to Todo App</h1>
+        <h1><%= message %></h1>
     </body>
 </html>
